Adjusted styling to fix Medication Type label from being moved by med edit history list

--- a/app/views/patients/medications.html.haml
+++ b/app/views/patients/medications.html.haml
@@ -52,11 +52,13 @@
               .right.edit
                 Edit
 
-            = render :partial => 'patient_medication_fields', :locals => { :pm => pm }
+            .columns.large-6.meds-form.content{:id => "edit-meds-#{pm.object.id}", data: { index: 0 }} 
 
-            .med-form.content{:id => "edit-meds-#{pm.object.id}"}  
-              = pm.check_box :_destroy
-              = pm.label :_destroy, "Terminate?", class: "delete"
+              = render :partial => 'patient_medication_fields', :locals => { :pm => pm }
+
+              .med-form.content{:id => "edit-meds-#{pm.object.id}"}  
+                = pm.check_box :_destroy
+                = pm.label :_destroy, "Terminate?", class: "delete"
 
     = f.submit "Save Medication", :class => "button tiny right save mt"
 
