--- a/app/views/patients/_clin_sum_sub_nav.html.haml
+++ b/app/views/patients/_clin_sum_sub_nav.html.haml
@@ -8,7 +8,7 @@
   %dd{role: "menuitem"}
     = link_to "Modal", modality_patient_path(@patient), :title => "Patient Modality"
   %dd{role: "menuitem"}
-    = link_to "Problems (#{@patient.problems.length})", problems_patient_path(@patient), :title => "Manage Problems"
+    = link_to "Problems (#{@patient.patient_problems.length})", problems_patient_path(@patient), :title => "Manage Problems"
   %dd{role: "menuitem"}
     = link_to "Meds (#{@patient.patient_medications.length})", medications_patient_path(@patient), :title => "Manage Medications"
   %dd{role: "menuitem"}
