--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -91,6 +91,8 @@
             = link_to "ESRF:", esrf_info_patient_path(@patient) 
             = "#{@patient.esrf_info.blank? || @patient.esrf_info.new_record? ? " " : @patient.esrf_info.date}"
 
+            = link_to "PD info:", pd_info_patient_path(@patient) 
+
       = yield
 
     - if content_for? :secondary_nav
