Moved patient mini renal profile into a partial, removed from application layout

--- a/app/views/patient_events/index.html.haml
+++ b/app/views/patient_events/index.html.haml
@@ -1,3 +1,7 @@
+.main-content
+  .row
+    = render partial: "patients/mini_renal_profile", locals: { model: @patient }
+
 .row.g-center
   %h5= link_to "Patient Events", patient_patient_events_path(@patient)
 
