--- a/app/views/patients/esrf_info.html.haml
+++ b/app/views/patients/esrf_info.html.haml
@@ -1,3 +1,7 @@
+.main-content
+  .row
+    = render partial: "patients/mini_renal_profile", locals: { model: @patient }
+
 .row
   %h5
     ESRF Summary 
