--- a/app/views/patients/problems.html.haml
+++ b/app/views/patients/problems.html.haml
@@ -1,3 +1,7 @@
+.main-content
+  .row
+    = render partial: "patients/mini_renal_profile", locals: { model: @patient }
+
 .row  
   %h5.g-center
     = link_to "Patient Problems", problems_patient_path(@patient)
