--- a/app/views/patients/esrf_info.html.haml
+++ b/app/views/patients/esrf_info.html.haml
@@ -1,4 +1,7 @@
 .main-content
+  .row.g-center
+    = render partial: "patients/patient_info_header", locals: { model: @patient }
+
   .row
     = render partial: "patients/mini_renal_profile", locals: { model: @patient }
 
