Edited button text for update death form

--- a/app/views/patients/death_update.html.haml
+++ b/app/views/patients/death_update.html.haml
@@ -31,7 +31,7 @@
       = f.label :death_details, "Notes/Details"
       = f.text_field :death_details
       
-      = submit_tag "Save", class: "button tiny right save"
+      = submit_tag "Save Cause of Death", class: "button tiny right save"
 
       = link_to "Cancel", modality_patient_path(@patient), class: "button tiny left cancel"
 
