Removed not used yet 'edit/update' link route

--- a/app/views/patients/pd_info.html.haml
+++ b/app/views/patients/pd_info.html.haml
@@ -130,7 +130,7 @@
               = p.user_id
 
             %td{:data => { :heading => "Entered By"}, valign: "top"}
-              = link_to "Update", edit_patient_peritonitis_episode_path(@patient,p.id)
+              = link_to "Update", "#"
           
 .wide-screen
   = content_for :secondary_nav do  
